project report short update

--- a/MSE_446_Project_Report.ipynb
+++ b/MSE_446_Project_Report.ipynb
@@ -12,6 +12,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Introduction and Problem Statement\n",
     "Recent catastrophic wildfires highlight the growing threat of natural disasters. In January 2025, Los\n",
@@ -44,7 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Datasets"
+    "### Datasets\n",
+    "The Datasets we use... Why?(short explanation)  \n",
+    "<font color='red'>How are the various datasets you're using related to each other? Clarify this.   </font>"
    ]
   },
   {
@@ -88,6 +95,18 @@
    "source": [
     "## Methodology"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
